--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,14 @@
 [tox]
-envlist = py27,py34
+envlist = py34,py35
 
 [testenv]
 usedevelop = True
 commands =
-    py.test --tb native --doctest-modules shell
+    # py.test --tb native --doctest-modules shell
     py.test --tb native --cov shell --cov-report term-missing tests
 deps =
     git+https://github.com/nathants/s
     -rrequirements.txt
-    pytest==2.7.0
+    git+https://github.com/pytest-dev/pytest
     pytest-cov==1.8.1
     mock==1.0.1
