--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,7 @@ commands =
     # py.test --tb native --doctest-modules shell
     py.test --tb native --cov shell --cov-report term-missing tests
 deps =
-    git+https://github.com/nathants/s
+    git+https://github.com/nathants/py-util
     -rrequirements.txt
     git+https://github.com/pytest-dev/pytest
     pytest-cov==1.8.1
