--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,10 @@
 [tox]
-envlist = py34,py35
+envlist = py36
 
 [testenv]
 usedevelop = True
 commands =
     # py.test --tb native --doctest-modules shell
-    py.test --tb native --cov shell --cov-report term-missing tests
+    py.test --tb native tests
 deps =
-    git+https://github.com/nathants/py-util
-    git+https://github.com/pytest-dev/pytest
-    pytest-cov==1.8.1
+    -rrequirements.txt
