--- a/tox.ini
+++ b/tox.ini
@@ -7,4 +7,5 @@ commands =
     # py.test --tb native --doctest-modules shell
     py.test --tb native tests
 deps =
-    -rrequirements.txt
+    git+https://github.com/pytest-dev/pytest
+install_command = pip install --process-dependency-links {opts} {packages}
