--- a/tox.ini
+++ b/tox.ini
@@ -7,5 +7,5 @@ commands =
     # py.test --tb native --doctest-modules shell
     py.test --tb native tests
 deps =
-    git+https://github.com/pytest-dev/pytest
+    pytest
 install_command = pip install --process-dependency-links {opts} {packages}
