dependency links are no more

--- a/tox.ini
+++ b/tox.ini
@@ -6,5 +6,5 @@ usedevelop = True
 commands =
     py.test --tb native tests
 deps =
+    -r requirements.txt
     pytest
-install_command = pip install --process-dependency-links {opts} {packages}
